[gd_scene load_steps=6 format=3 uid="uid://4rke34waufhs"]

[ext_resource type="Script" uid="uid://buinp04htrcsj" path="res://scripts/player/character_body_2d.gd" id="1_ds11u"]
[ext_resource type="Texture2D" uid="uid://bx54gdekv6ux4" path="res://assets/icon.svg" id="2_3yt18"]
[ext_resource type="Texture2D" uid="uid://diguuv5a66skn" path="res://assets/godotLogo.png" id="3_cfwxl"]
[ext_resource type="PackedScene" uid="uid://2xbd1xlhiow1" path="res://conponents/attack_component.tscn" id="3_kgpfv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4uv6h"]
size = Vector2(121, 119)

[node name="playerNoLimit" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_ds11u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_4uv6h")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture = ExtResource("2_3yt18")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(2, -4)
scale = Vector2(10, 10)
zoom = Vector2(0.6, 0.6)
limit_bottom = 1235
position_smoothing_enabled = true

[node name="hitCooldown" type="Timer" parent="CharacterBody2D"]
one_shot = true

[node name="AttackComponent" parent="CharacterBody2D" instance=ExtResource("3_kgpfv")]

[node name="dashtimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CanDashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -66.0
offset_right = 347.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="UI/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_cfwxl")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="UI/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_cfwxl")
expand_mode = 2

[node name="TextureRect3" type="TextureRect" parent="UI/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_cfwxl")
expand_mode = 2

[node name="TextureRect4" type="TextureRect" parent="UI/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_cfwxl")
expand_mode = 2

[node name="TextureRect5" type="TextureRect" parent="UI/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_cfwxl")
expand_mode = 2

[connection signal="timeout" from="CharacterBody2D/hitCooldown" to="CharacterBody2D" method="_on_hit_cooldown_timeout"]
[connection signal="timeout" from="dashtimer" to="CharacterBody2D" method="_on_dashtimer_timeout"]
[connection signal="timeout" from="CanDashTimer" to="CharacterBody2D" method="_on_can_dash_timer_timeout"]
